Pythonic Fusion versions of most notebooks

--- a/approx-uncertain-ineq/hard_uncertain.ipynb
+++ b/approx-uncertain-ineq/hard_uncertain.ipynb
@@ -243,6 +243,7 @@
     "import numpy as np\n",
     "from numpy import random\n",
     "from mosek.fusion import *\n",
+    "import mosek.fusion.pythonic\n",
     "import sys\n",
     "import scipy\n",
     "from scipy import sparse\n",
@@ -312,16 +313,15 @@
     "        M.objective('OBJ_exact',ObjectiveSense.Minimize,Expr.sum(x))\n",
     "        \n",
     "        #b(x),dim = [p,2^L,m].\n",
-    "        bx = Expr.repeat(Expr.repeat(Expr.repeat(Expr.neg(Expr.sum(x)),p,0),2**L,1),m,2)      \n",
+    "        bx = Expr.repeat(Expr.repeat(Expr.repeat(-Expr.sum(x),p,0),2**L,1),m,2)      \n",
     "        #[A(x).(uncertainty vector)] , dim = [p,2^L,m].\n",
-    "        Ax_U = Expr.stack(2,[Expr.mul(Expr.transpose(Expr.hstack([Expr.mul(b,x) \n",
-    "                                                       for b in B_set])),U) for B_set in Bt_p])\n",
+    "        Ax_U = Expr.stack(2,[Expr.hstack([b @ x for b in B_set]).T @ U for B_set in Bt_p])\n",
     "        h1 = M.variable('h1',[p,2**L,m])\n",
     "        h2 = Expr.constTerm([p,2**L,m],1.0)\n",
-    "        h3 = Expr.add(Ax_U,bx)\n",
+    "        h3 = Ax_U+bx\n",
     "        \n",
     "        Cone = M.constraint('Exp1',Expr.stack(3,[h1,h2,h3]),Domain.inPExpCone())\n",
-    "        Line = M.constraint('Lin1',Expr.sum(h1,0),Domain.lessThan(1.0))  \n",
+    "        Line = M.constraint('Lin1',Expr.sum(h1,0)<=1.0)\n",
     "        \n",
     "        M.solve()\n",
     "        return(M.primalObjValue(),M.getSolverDoubleInfo('optimizerTime'))"
@@ -392,30 +392,28 @@
     "        Vt = M.variable('Vt',[p,q,m],Domain.greaterThan(0.0))             #Note that we define the transpose of V.\n",
     "        \n",
     "        #b(x), dim = [p,m].\n",
-    "        bx = Expr.repeat(Expr.repeat(Expr.neg(Expr.sum(x)),p,0),m,1)\n",
+    "        bx = Expr.repeat(Expr.repeat(-Expr.sum(x),p,0),m,1)\n",
     "        #A(x), dim = [p,L,m].\n",
-    "        Ax = Expr.stack(2,[Expr.transpose(Expr.hstack([Expr.mul(bT[i],x) for i in range(p)])) for bT in Bt_p]) \n",
+    "        Ax = Expr.stack(2,[Expr.hstack([bT[i]@x for i in range(p)]).T for bT in Bt_p]) \n",
     "        \n",
     "        h1 = M.variable('h1',[p,m],Domain.greaterThan(0.0))\n",
     "        h2 = Expr.constTerm([p,m],1.0)\n",
     "        #Matrix mul(V^T,d), dim = [p,m].\n",
-    "        Vt_d = Expr.hstack([Expr.mul(Vt.slice([0,0,i],[p,q,i+1]).reshape([p,q]),d) \n",
-    "                            for i in range(m)])\n",
+    "        Vt_d = Expr.hstack([Vt[:p,:q,i].reshape([p,q]) @ d for i in range(m)])\n",
     "        #(d^T . u), dim = [p,m].\n",
-    "        dt_u = Expr.transpose(Expr.repeat(Expr.mul(d,u),p,1))                                        \n",
-    "        h3 = Expr.add([Vt_d,bx,dt_u])\n",
+    "        dt_u = Expr.repeat(d@u,p,1).T\n",
+    "        h3 = Vt_d + bx + dt_u\n",
     "        \n",
     "        #Exponential Cone\n",
     "        Cone = M.constraint('ExpCone',Expr.stack(2,[h1,h2,h3]),Domain.inPExpCone())           \n",
     "        #Linear constraint on the vector h1.\n",
-    "        LinIneq = M.constraint('LinIneq',Expr.sum(h1,0),Domain.lessThan(1.0))\n",
+    "        LinIneq = M.constraint('LinIneq',Expr.sum(h1,0)<=1.0)\n",
     "        #Matrix mult(V^T,D), dim = [p,L,m].\n",
-    "        Vt_D = Expr.stack(2,[Expr.mul(Vt.slice([0,0,i],[p,q,i+1]).reshape([p,q]),\n",
-    "                                      Matrix.sparse(D)) for i in range(m)])\n",
+    "        Vt_D = Expr.stack(2,[Vt[:p,:q,i].reshape([p,q]) @ Matrix.sparse(D) for i in range(m)])\n",
     "        #Matrix mult(D^T,u), dim = [p,L,m].\n",
-    "        Dt_u = Expr.repeat(Expr.reshape(Expr.mul(Dt,u),[1,L,m]),p,0)\n",
+    "        Dt_u = Expr.repeat(Expr.reshape(Dt @ u,[1,L,m]),p,0)\n",
     "        #Second constraint, i.e. the equality. \n",
-    "        Eq = M.constraint('Eq',Expr.sub(Expr.sub(Ax,Vt_D),Dt_u),Domain.equalsTo(0.0)) \n",
+    "        Eq = M.constraint('Eq',Ax == Vt_D + Dt_u) \n",
     "        \n",
     "        M.solve()\n",
     "        return(M.primalObjValue(),M.getSolverDoubleInfo('optimizerTime'))"
@@ -475,9 +473,9 @@
     "        M.objective('OBJ_approx2',ObjectiveSense.Minimize,Expr.sum(x))\n",
     "        \n",
     "        #b(x), dim = [p,m].\n",
-    "        bx = Expr.repeat(Expr.repeat(Expr.neg(Expr.sum(x)),p,0),m,1) \n",
+    "        bx = Expr.repeat(Expr.repeat(-Expr.sum(x),p,0),m,1) \n",
     "        #A(x), dim = [p,L,m].\n",
-    "        Ax = Expr.stack(2,[Expr.transpose(Expr.hstack([Expr.mul(bT[i],x) for i in range(p)])) for bT in Bt_p])  \n",
+    "        Ax = Expr.stack(2,[Expr.hstack([bT[i]@x for i in range(p)]).T for bT in Bt_p])  \n",
     "        \n",
     "        u = M.variable('u',[q,m],Domain.greaterThan(0.0))\n",
     "        r = M.variable('r',[q,m],Domain.greaterThan(0.0))\n",
@@ -485,29 +483,28 @@
     "        \n",
     "        h_11 = M.variable('h_11',[p,m],Domain.greaterThan(0.0))\n",
     "        #1 + (d^T.r), dim = [m].\n",
-    "        dt_r_1 = Expr.add(Expr.constTerm([m],1.0),Expr.mul(d,r))                             \n",
-    "        h_12 = Expr.transpose(Expr.repeat(dt_r_1,p,1))\n",
+    "        dt_r_1 = Expr.constTerm([m],1.0) + d @ r\n",
+    "        h_12 = Expr.repeat(dt_r_1,p,1).T\n",
     "        #Matrix mult(V^T,d), dim = [p,m].\n",
-    "        Vt_d = Expr.hstack([Expr.mul(Vt.slice([0,0,i],[p,q,i+1]).reshape([p,q]),d) for i in range(m)])\n",
+    "        Vt_d = Expr.hstack([Vt[:p,:q,i].reshape([p,q]) @ d for i in range(m)])\n",
     "        #(d^T,u), dim = [p,m].\n",
-    "        dt_u = Expr.transpose(Expr.repeat(Expr.mul(d,u),p,1))\n",
-    "        h_13 = Expr.add([Vt_d,dt_u,bx])\n",
+    "        dt_u = Expr.repeat(d @ u,p,1).T\n",
+    "        h_13 = Vt_d + dt_u + bx\n",
     "        #First set of cones.\n",
     "        Cone1 = M.constraint('Cone1',Expr.stack(2,[h_11,h_12,h_13]),Domain.inPExpCone())\n",
-    "        LinIneq1 = M.constraint('LinIneq1',Expr.sub(Expr.sum(h_11,0),dt_r_1),Domain.lessThan(0.0))\n",
+    "        LinIneq1 = M.constraint('LinIneq1',Expr.sum(h_11,0) <= dt_r_1)\n",
     "        \n",
     "        \n",
     "        h_21 = M.variable('h_21',[p,L,m],Domain.greaterThan(0.0))\n",
     "        #Matrix mult(D_T,r), dim = [L,m].\n",
-    "        Dt_r = Expr.mul(Dt,r)                                                                 \n",
-    "        h_22 = Expr.repeat(Expr.reshape(Expr.neg(Dt_r),[1,L,m]),p,0)\n",
+    "        Dt_r = Dt @ r\n",
+    "        h_22 = Expr.repeat(Expr.reshape(-Dt_r,[1,L,m]),p,0)\n",
     "        #Matrix mult(V^T,D), stacked in m, dim = [p,L,m].\n",
-    "        Vt_D = Expr.stack(2,[Expr.mul(Vt.slice([0,0,i],[p,q,i+1]).reshape([p,q]),\n",
-    "                                      Matrix.sparse(D)) for i in range(m)])\n",
-    "        h_23 = Expr.sub(Expr.sub(Ax,Vt_D),Expr.repeat(Expr.reshape(Expr.mul(Dt,u),[1,L,m]),p,0))\n",
+    "        Vt_D = Expr.stack(2,[Vt[:p,:q,i].reshape([p,q]) @ Matrix.sparse(D) for i in range(m)])\n",
+    "        h_23 = Ax - Vt_D - Expr.repeat(Expr.reshape(Dt@u,[1,L,m]),p,0)\n",
     "        #Second set of cones. Note the stacking in 4th dimension.\n",
     "        Cone2 = M.constraint('Cone2',Expr.stack(3,[h_21,h_22,h_23]),Domain.inPExpCone())\n",
-    "        LinIneq2 = M.constraint('LinIneq2',Expr.sub(Expr.sum(h_21,0),Expr.neg(Dt_r)),Domain.equalsTo(0.0))\n",
+    "        LinIneq2 = M.constraint('LinIneq2',Expr.sum(h_21,0) + Expr.neg(Dt_r) == 0)\n",
     "\n",
     "        M.solve()\n",
     "        return(M.primalObjValue(),M.getSolverDoubleInfo('optimizerTime'))"
@@ -539,9 +536,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Making 20 instances of the problem with n=m=100 and L ranging from 1 to 20. \n",
+    "#Making instances of the problem with n=m=100 and L ranging from 1 to L_max.\n",
     "#Solve some initial ones exactly and others approximately\n",
-    "t, tExact, n, m = 20, 7, 100, 100\n",
+    "#You can increase L_max, here we keep it small for the purpse of demonstration\n",
+    "L_max = 10\n",
+    "t, tExact, n, m = L_max, 4, 100, 100\n",
     "n_list = [n]*t\n",
     "m_list = [m]*t\n",
     "L_list = np.arange(1,t+1,1)"
@@ -551,7 +550,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will generate random matrices, with sparsity density $s = 0.1$. For every inequality constraint in the problem,  there are $p = 2$ such matrices. As stated before, $m=100$ inequalities are involved. The dimension of the uncertain parameter, i.e. $L$ ($\\zeta \\in \\Bbb R^L$) ranges in $[1,20]$."
+    "We will generate random matrices, with sparsity density $s = 0.1$. For every inequality constraint in the problem,  there are $p = 2$ such matrices. As stated before, $m=100$ inequalities are involved. The dimension of the uncertain parameter, i.e. $L$ ($\\zeta \\in \\Bbb R^L$) ranges in $[1,L_{max}]$."
    ]
   },
   {
@@ -742,9 +741,9 @@
    "source": [
     "#Plot for the computation time of the exact case.\n",
     "L_exact_comp = np.arange(1,len(Ex)+1,1)\n",
-    "L_comp = np.arange(1,20,1)\n",
-    "plt.plot(L_comp,App1[0:19,1],label='Approx 1')\n",
-    "plt.plot(L_comp,App2[0:19,1],label='Approx 2')\n",
+    "L_comp = np.arange(1,L_max,1)\n",
+    "plt.plot(L_comp,App1[0:(L_max-1),1],label='Approx 1')\n",
+    "plt.plot(L_comp,App2[0:(L_max-1),1],label='Approx 2')\n",
     "plt.plot(L_exact_comp,Ex[:,1],label='Exact case')\n",
     "plt.legend()\n",
     "plt.xlabel('L')\n",
@@ -756,8 +755,8 @@
     "\n",
     "#Plot for the computation times of the approximations.\n",
     "\n",
-    "plt.plot(L_comp,App1[0:19,1],label='Approx 1')\n",
-    "plt.plot(L_comp,App2[0:19,1],label='Approx 2')\n",
+    "plt.plot(L_comp,App1[0:(L_max-1),1],label='Approx 1')\n",
+    "plt.plot(L_comp,App2[0:(L_max-1),1],label='Approx 2')\n",
     "plt.legend()\n",
     "plt.xlabel('L')\n",
     "plt.xticks(L_comp)\n",
@@ -804,7 +803,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -818,7 +817,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
