--- a/equilibrium/equilibrium.ipynb
+++ b/equilibrium/equilibrium.ipynb
@@ -58,6 +58,7 @@
    "outputs": [],
    "source": [
     "from mosek.fusion import *\n",
+    "import mosek.fusion.pythonic\n",
     "\n",
     "# w - masses of points\n",
     "# l - lengths of strings\n",
@@ -77,16 +78,15 @@
     "    A = Matrix.sparse(m, n, list(range(m))+list(range(m)), starts+ends, [1.0]*m+[-1.0]*m)\n",
     "\n",
     "    # ||x_i-x_j|| <= l_{i,j}\n",
-    "    c = M.constraint(\"c\", Expr.hstack(Expr.constTerm(list(l.values())), Expr.mul(A, x)), \n",
+    "    c = M.constraint(\"c\", Expr.hstack(Expr.constTerm(list(l.values())), A @ x), \n",
     "        Domain.inQCone() )\n",
     "\n",
     "    # x_i = f_i for fixed points\n",
     "    for i in f:\n",
-    "        M.constraint(x.slice([i,0], [i+1,2]), Domain.equalsTo(list(f[i])).withShape([1,2]))\n",
+    "        M.constraint(Var.flatten(x[i,:]) == list(f[i]))\n",
     "\n",
     "    # sum (g w_i x_i_2)\n",
-    "    M.objective(ObjectiveSense.Minimize, \n",
-    "        Expr.mul(g, Expr.dot(w, x.slice([0,1], [n,2]))))\n",
+    "    M.objective(ObjectiveSense.Minimize, g * (x[:,1].T @ w))\n",
     "\n",
     "    # Solve\n",
     "    M.solve()\n",
@@ -273,26 +273,26 @@
     "    M = Model(\"dual strings\")\n",
     "\n",
     "    x = M.variable(Domain.inQCone(m,3))       #(y,v)\n",
-    "    y = x.slice([0,0],[m,1])\n",
-    "    v = x.slice([0,1],[m,3])\n",
+    "    y = x[0:m,0]\n",
+    "    v = x[0:m,1:3]\n",
     "    z = M.variable([n,2])\n",
     "\n",
     "    # z_i = 0 if i is not fixed\n",
     "    for i in range(n):\n",
     "        if i not in f:\n",
-    "            M.constraint(z.slice([i,0], [i+1,2]), Domain.equalsTo(0.0))\n",
+    "            M.constraint(z[i,:] == 0)\n",
     "\n",
     "    B = Matrix.sparse(m, n, list(range(m))+list(range(m)), starts+ends, [1.0]*m+[-1.0]*m).transpose()\n",
     "    w2 = Matrix.sparse(n, 2, range(n), [1]*n, [-wT*g for wT in w])\n",
     "\n",
     "    # sum(v_ij *sgn(ij)) + z_i = -(0, gw_i) for all vertices i\n",
-    "    M.constraint(Expr.add( Expr.mul(B, v), z ), Domain.equalsTo(w2))\n",
+    "    M.constraint(B @ v + z == w2)\n",
     "\n",
     "    # Objective -l*y -fM*z\n",
     "    fM = Matrix.sparse(n, 2, list(f.keys())+list(f.keys()), [0]*len(f)+[1]*len(f), \n",
     "                       [pt[0] for pt in f.values()] + [pt[1] for pt in f.values()])\n",
     "    \n",
-    "    M.objective(ObjectiveSense.Maximize, Expr.neg(Expr.add(Expr.dot(list(l.values()), y),Expr.dot(fM, z))))\n",
+    "    M.objective(ObjectiveSense.Maximize, - Expr.dot(list(l.values()), y) - Expr.dot(fM, z))\n",
     "    M.solve()"
    ]
   },
@@ -366,16 +366,15 @@
     "    A = Matrix.sparse(m, n, list(range(m))+list(range(m)), starts+ends, [1.0]*m+[-1.0]*m)\n",
     "\n",
     "    # ||x_i-x_j|| <= l_{i,j} + t_{i,j}\n",
-    "    c = M.constraint(\"c\", Expr.hstack(Expr.add(t, Expr.constTerm(list(l.values()))), Expr.mul(A, x)), \n",
+    "    c = M.constraint(\"c\", Expr.hstack(t + Expr.constTerm(list(l.values())), A @ x), \n",
     "        Domain.inQCone() )\n",
     "\n",
     "    # x_i = f_i for fixed points\n",
     "    for i in f:\n",
-    "        M.constraint(x.slice([i,0], [i+1,2]), Domain.equalsTo(list(f[i])).withShape([1,2]))\n",
+    "        M.constraint(Var.flatten(x[i,:]) == list(f[i]))\n",
     "\n",
     "    # sum (g w_i x_i_2) + k*T\n",
-    "    M.objective(ObjectiveSense.Minimize, \n",
-    "        Expr.add(Expr.mul(k,T), Expr.mul(g, Expr.dot(w, x.slice([0,1], [n,2])))))\n",
+    "    M.objective(ObjectiveSense.Minimize, k * T + g * (x[:,1].T @ w))\n",
     "\n",
     "    # Solve\n",
     "    M.solve()\n",
@@ -428,7 +427,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -442,7 +441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
