--- a/facility-location/small_disks.ipynb
+++ b/facility-location/small_disks.ipynb
@@ -44,6 +44,7 @@
    "source": [
     "%matplotlib inline\n",
     "from mosek.fusion import *\n",
+    "import mosek.fusion.pythonic\n",
     "import numpy as np\n",
     "\n",
     "def data(n):\n",
@@ -131,12 +132,12 @@
     "    R = M.variable(k, Domain.greaterThan(0.0))              #r_1...r_k\n",
     "    X = M.variable([k,dim], Domain.unbounded())             #each row is one x_j\n",
     "    S = M.variable([n,k], Domain.binary())\n",
-    "\n",
+    "   \n",
     "    RRep = Var.repeat(R, n)\n",
-    "    Penalty = Expr.flatten(Expr.mul(bigM, Expr.sub(1.0, S)))    #M*(1-S)\n",
-    "    CoordDiff = Expr.sub(np.repeat(P,k,0), Var.repeat(X, n))    #each p_i meet each x_j once in Expr.sub\n",
-    "\n",
-    "    M.constraint(Expr.hstack(Expr.add(RRep,Penalty), CoordDiff), Domain.inQCone())\n",
+    "    Penalty = Expr.flatten(bigM * (1.0 - S))                #M*(1-S)\n",
+    "    CoordDiff = np.repeat(P,k,0) - Var.repeat(X, n)         #each p_i meet each x_j once in Expr.sub\n",
+    "  \n",
+    "    M.constraint(Expr.hstack(RRep + Penalty, CoordDiff), Domain.inQCone())\n",
     "\n",
     "    return M, R, X, S"
    ]
@@ -190,13 +191,15 @@
    "source": [
     "def minimalEnclosing(P):\n",
     "    M, R, X, S = basicModel(1, P, 0.0)\n",
-    "    M.constraint(S, Domain.equalsTo(1.0))\n",
-    "    M.objective(ObjectiveSense.Minimize, R.index(0))\n",
-    "    M.writeTask('p1.task.gz')\n",    
+    "    M.constraint(S == 1.0)\n",
+    "    M.objective(ObjectiveSense.Minimize, R[0])\n",
+    "    M.writeTask('p1.task.gz')\n",
     "    M.solve()\n",
     "    return R.level(), X.level()\n",
     "\n",
-    "%time P=gaussianData(1000); r, x = minimalEnclosing(P); display(P, r, x)"
+    "P = gaussianData(1000)\n",
+    "r, x = minimalEnclosing(P)\n",
+    "display(P, r, x)"
    ]
   },
   {
@@ -239,13 +242,15 @@
    "source": [
     "def maxCoverage(P, rMax):\n",
     "    M, R, X, S = basicModel(1, P, bigM(P))\n",
-    "    M.constraint(R, Domain.lessThan(rMax))\n",
+    "    M.constraint(R <= rMax)\n",
     "    M.objective(ObjectiveSense.Maximize, Expr.sum(S))\n",
-    "    M.writeTask('p2.task.gz')\n",        
+    "    M.writeTask('p2.task.gz')\n",
     "    M.solve()\n",
     "    return R.level(), X.level()\n",
     "\n",
-    "%time P=data(100); r, x = maxCoverage(P, 0.25); display(P, r, x)"
+    "P = data(100)\n",
+    "r, x = maxCoverage(P, 0.25)\n",
+    "display(P, r, x)"
    ]
   },
   {
@@ -292,13 +297,15 @@
    "source": [
     "def minDiamKCircleCover(P, k):\n",
     "    M, R, X, S = basicModel(k, P, bigM(P))\n",
-    "    M.constraint(Expr.sum(S,1), Domain.greaterThan(1.0))       #sum inside each row, i.e. along dimension 1\n",
+    "    M.constraint(Expr.sum(S,1) >= 1.0)                 #sum inside each row, i.e. along dimension 1\n",
     "    M.objective(ObjectiveSense.Minimize, Expr.sum(R))\n",
-    "    M.writeTask('p3.task.gz')\n",        
+    "    M.writeTask('p3.task.gz')\n",
     "    M.solve()\n",
     "    return R.level(), X.level()\n",
     "\n",
-    "%time P=data(20); r, x = minDiamKCircleCover(P, 3); display(P, r, x)"
+    "P = data(20)\n",
+    "r, x = minDiamKCircleCover(P, 3)\n",
+    "display(P, r, x)"
    ]
   },
   {
@@ -343,13 +350,15 @@
     "    M, R, X, S = basicModel(k, P, bigM(P))\n",
     "    t = M.variable(1, Domain.greaterThan(0.0))             \n",
     "    M.constraint(Expr.vstack(t, R), Domain.inQCone())        #t>=sqrt(sum r_i^2)\n",
-    "    M.constraint(Expr.sum(S,1), Domain.greaterThan(1.0))\n",
+    "    M.constraint(Expr.sum(S,1) >= 1.0)\n",
     "    M.objective(ObjectiveSense.Minimize, t)\n",
-    "    M.writeTask('p4.task.gz')\n",        
+    "    M.writeTask('p4.task.gz')\n",
     "    M.solve()\n",
     "    return R.level(), X.level()\n",
     "\n",
-    "%time P=data(20); r, x = minAreaKCircleCover(P, 3); display(P, r, x)"
+    "P = data(20)\n",
+    "r, x = minAreaKCircleCover(P, 3)\n",
+    "display(P, r, x)"
    ]
   },
   {
@@ -394,16 +403,18 @@
    "source": [
     "def maxKCoverage(P, k, rMax):\n",
     "    M, R, X, S = basicModel(k, P, bigM(P))\n",
-    "    M.constraint(R, Domain.equalsTo(rMax))\n",
+    "    M.constraint(R == rMax)\n",
     "    t = M.variable(\"t\", len(P), Domain.binary())\n",
-    "    M.constraint(Expr.sub(t, Expr.sum(S,1)), Domain.lessThan(0.0))     #contains one inequality for each column\n",
+    "    M.constraint(t <= Expr.sum(S,1))                     #contains one inequality for each column\n",
     "    M.objective(ObjectiveSense.Maximize, Expr.sum(t))\n",
     "    M.setSolverParam('mioConicOuterApproximation', 'on')\n",
-    "    M.writeTask('p5.task.gz')\n",    
+    "    M.writeTask('p5.task.gz')\n",
     "    M.solve()\n",
     "    return R.level(), X.level()\n",
     "\n",
-    "%time P=data(20); r, x = maxKCoverage(P, 3, 0.1); display(P, r, x)"
+    "P = data(20)\n",
+    "r, x = maxKCoverage(P, 3, 0.1)\n",
+    "display(P, r, x)"
    ]
   },
   {
@@ -415,7 +426,6 @@
     "For simplicity of the presentation we ignored various issues and hints and we leave them as an exercise:\n",
     "* Checking that a solution has actually been found.\n",
     "* More generally: handling exceptions.\n",
-    "* Symmetry breaking: in problems 3 and 4 we can achieve about $k$-fold speedup by setting $s_{11}=1$, i.e. declaring that the first point is covered by circle number $1$.\n",
     "* For large instances one should perhaps terminate the solver when a solution of sufficiently high quality has been located.\n"
    ]
   },
@@ -441,7 +451,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -455,7 +465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
