--- a/fusion-intro/fusion.ipynb
+++ b/fusion-intro/fusion.ipynb
@@ -27,6 +27,7 @@
    "outputs": [],
    "source": [
     "from mosek.fusion import *\n",
+    "import mosek.fusion.pythonic      # Provides operators +, -, @, .T, slicing etc.\n",
     "import numpy as np\n",
     "import sys"
    ]
@@ -91,7 +92,7 @@
     "x = M.variable(n)\n",
     "\n",
     "# Construct Ax+b\n",
-    "e = Expr.add(Expr.mul(A,x), b)\n",
+    "e = A @ x + b\n",
     "\n",
     "# Check we have the right dimension\n",
     "print(e.getShape())"
@@ -156,7 +157,7 @@
     "f = np.random.uniform(0.0, 1.0, [n])\n",
     "\n",
     "# f^T dot x >= 1\n",
-    "M.constraint(Expr.dot(f,x), Domain.greaterThan(1.0))\n",
+    "M.constraint(Expr.dot(f,x) >= 1)\n",
     "\n",
     "M.solve()\n",
     "print(x.level())"
@@ -257,7 +258,7 @@
     "M.setLogHandler(sys.stdout)\n",
     "\n",
     "# Objective = t + lambda dot w\n",
-    "M.objective(ObjectiveSense.Minimize, Expr.add(t, Expr.dot(lamb,w)))\n",
+    "M.objective(ObjectiveSense.Minimize, t + w.T @ lamb)\n",
     "M.solve()\n",
     "print(x.level())"
    ]
@@ -322,7 +323,7 @@
     "print(diag, \"\\n\")\n",
     "\n",
     "# Fixed diagonal\n",
-    "M.constraint(X.diag(), Domain.equalsTo(diag))\n",
+    "M.constraint(X.diag() == diag)\n",
     "\n",
     "# Objective = sum of elements of X\n",
     "M.objective(ObjectiveSense.Maximize, Expr.sum(X))\n",
@@ -371,17 +372,17 @@
     "X   = M.variable('X', [n,n])\n",
     "\n",
     "# Binary version\n",
-    "e0  = Expr.add(x,1.0)           # x+1.0 (element-wise)\n",
-    "e1  = Expr.add(x,y)             # x+y\n",
-    "e2  = Expr.add(a,y)             # a+y\n",
-    "e3  = Expr.sub(x,y)             # x-y \n",
-    "e4  = Expr.add(Expr.add(x,y),z) # x+y+z\n",
+    "e0  = x + 1.0           # x+1.0 (element-wise)\n",
+    "e1  = x + y             # x+y\n",
+    "e2  = a + y             # a+y\n",
+    "e3  = x - y             # x-y \n",
+    "e4  = x + y + z         # x+y+z\n",
     "\n",
     "# List version\n",
     "e5  = Expr.add([x, y, z])       # x+y+z\n",
     "\n",
     "# Multiplication \n",
-    "e6  = Expr.mul(7.0,x)           # 7.0*x  \n",
+    "e6  = 7.0 * x                   # 7.0*x  \n",
     "e7  = Expr.mulElm(a,x)          # a *. x, element wise multiplication\n",
     "\n",
     "# Inner and outer products\n",
@@ -395,8 +396,18 @@
     "e10 = Expr.sum(x)\n",
     "\n",
     "# Matrix multiplication\n",
-    "e11 = Expr.mul(A, X)            # AX\n",
-    "print(e11.getShape())"
+    "e11 = A @ X                     # A@X\n",
+    "print(e11.getShape())\n",
+    "\n",
+    "# If you DON'T use the mosek.fusion.pythonic extension you can\n",
+    "# still write these expressions with explicit function calls\n",
+    "e0_expl  = Expr.add(x, 1.0)           # x+1.0 (element-wise)\n",
+    "e1_expl  = Expr.add(x, y)             # x+y\n",
+    "e2_expl  = Expr.add(a, y)             # a+y\n",
+    "e3_expl  = Expr.sub(x, y)             # x-y \n",
+    "e4_expl  = Expr.add(Expr.add(x,y),z)  # x+y+z\n",
+    "e6_expl  = Expr.mul(7.0, x)           # 7.0*x  \n",
+    "e11_expl = Expr.mul(A, X)             # A@X"
    ]
   },
   {
@@ -412,7 +423,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -426,7 +437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
