--- a/kmeans-clustering/kmeans.ipynb
+++ b/kmeans-clustering/kmeans.ipynb
@@ -56,6 +56,7 @@
    "source": [
     "import numpy as np\n",
     "from mosek.fusion import *\n",
+    "import mosek.fusion.pythonic\n",
     "import matplotlib.pyplot as plt\n",
     "import sys\n",
     "\n",
@@ -227,7 +228,7 @@
     "    # quadratic cone constraints\n",
     "    a1 = Expr.flatten( distanceAux )\n",
     "    a2 = Expr.constTerm([n*numberOfClusters, 1], 0.5)\n",
-    "    a3 = Expr.sub(  Expr.repeat(centroids, n, 0) , xs )\n",
+    "    a3 = Expr.repeat(centroids, n, 0) - xs\n",
     "    \n",
     "    hstack = Expr.hstack([a1, a2, a3])                      # ( d_{ij}Aux, 1/2, x_i - c_j ) in Qr\n",
     "    M.constraint( hstack, Domain.inRotatedQCone() )\n",
@@ -243,15 +244,14 @@
     "        for clusterInd in range(0, numberOfClusters):\n",
     "            dijAux = distanceAux.index([pointInd, clusterInd])\n",
     "\n",
-    "            ANDs[clusterInd] = DJC.AND( DJC.term( Expr.sub(di, dijAux),Domain.greaterThan(0)),   # di >= dijAux\n",
-    "                                        DJC.term( label , Domain.equalsTo(clusterInd)       ))   # Y_i = j\n",
+    "            ANDs[clusterInd] = DJC.AND( DJC.term( di >= dijAux),\n",
+    "                                        DJC.term( label == clusterInd) )\n",
     "        \n",
     "        M.disjunction( [ ANDs[i] for i in range(0, numberOfClusters) ] )\n",
     "\n",
     "\n",
     "    # symmetry breaking constraints\n",
-    "    M.constraint( Expr.sub(centroids.slice([0, 0], [numberOfClusters-1, 1]), \n",
-    "                           centroids.slice([1, 0], [numberOfClusters, 1])), Domain.lessThan(0) )\n",
+    "    M.constraint( centroids[:-1,0] <= centroids[1:,0] )\n",
     "\n",
     "    ########## solve ##########\n",
     "\n",
@@ -522,7 +522,7 @@
     "\n",
     "    # quadratic cone constraints - THIS IS THE ONLY DIFFERENCE TO K-MEANS MODEL\n",
     "    a1 = Expr.flatten( distanceAux )\n",
-    "    a2 = Expr.sub(  Expr.repeat(centroids, n, 0) , xs )\n",
+    "    a2 = Expr.repeat(centroids, n, 0) - xs\n",
     "    \n",
     "    hstack = Expr.hstack([a1, a2])                      # ( d_{ij}Aux, x_i - c_j )\n",
     "    M.constraint( hstack, Domain.inQCone() )            # now a quadratic instead of rotated quadratic cone\n",
@@ -538,14 +538,13 @@
     "        for clusterInd in range(0, numberOfClusters):\n",
     "            dijAux = distanceAux.index([pointInd, clusterInd])\n",
     "\n",
-    "            ANDs[clusterInd] = DJC.AND( DJC.term( Expr.sub(di, dijAux),Domain.greaterThan(0)),   # di >= dijAux\n",
-    "                                        DJC.term( label , Domain.equalsTo(clusterInd)       ))   # Y_i = j\n",
+    "            ANDs[clusterInd] = DJC.AND( DJC.term( di >= dijAux ),\n",
+    "                                        DJC.term( label == clusterInd ) )\n",
     "\n",
     "        M.disjunction( [ ANDs[i] for i in range(0, numberOfClusters) ] )\n",
     "\n",
     "    # symmetry breaking constraints\n",
-    "    M.constraint( Expr.sub(centroids.slice([0, 0], [numberOfClusters-1, 1]), \n",
-    "                           centroids.slice([1, 0], [numberOfClusters, 1])), Domain.lessThan(0) )\n",
+    "    M.constraint( centroids[:-1,0] <= centroids[1:,0] )\n",
     "\n",
     "    ########## solve ##########\n",
     "\n",
