--- a/pwl-convex-approximation/pwl-convex-approximation.ipynb
+++ b/pwl-convex-approximation/pwl-convex-approximation.ipynb
@@ -51,6 +51,7 @@
    "source": [
     "import numpy as np\n",
     "from mosek.fusion import *\n",
+    "import mosek.fusion.pythonic\n",
     "import matplotlib.pyplot as plt\n",
     "plt.rcParams['figure.figsize'] = [10, 10]\n",
     "from matplotlib import cm\n",
@@ -252,7 +253,7 @@
     "\n",
     "    # auxDiff = t - ys\n",
     "    auxDiff = M.variable( n, Domain.unbounded() )\n",
-    "    M.constraint( Expr.sub(t, auxDiff), Domain.equalsTo(Y) )\n",
+    "    M.constraint( auxDiff == t - Y )\n",
     "\n",
     "    # (0.5, m, t - ys) in Q_r\n",
     "    auxHalf = M.variable( 1, Domain.equalsTo(0.5) )\n",
@@ -267,7 +268,7 @@
     "    t_is = Expr.flatten( Expr.repeat(t, n, 1) )\n",
     "    t_js = Expr.repeat( t, n, 0 )\n",
     "\n",
-    "    Diff = Expr.sub(t_js, t_is)\n",
+    "    Diff = t_js - t_is\n",
     "\n",
     "    # make a dot product <s_j,x_i - x_j>\n",
     "    x_is = np.repeat( X, repeats=n, axis=0 )\n",
@@ -277,8 +278,7 @@
     "    dotProd = Expr.sum( Expr.mulElm(ss_stack ,x_is - x_js) , 1 )   # dot product  \n",
     "    \n",
     "    # add constraint\n",
-    "    expr = Expr.add(Diff, dotProd)\n",
-    "    M.constraint( expr, Domain.lessThan(0) )\n",
+    "    M.constraint( Diff + dotProd <= 0 )\n",
     "\n",
     "    ############## solve problem ##############\n",
     "\n",
