--- a/regression/regression.ipynb
+++ b/regression/regression.ipynb
@@ -42,7 +42,8 @@
    "source": [
     "import mosek\n",
     "from mosek.fusion import *\n",
-    "print(\"MOSEK version\", mosek.Env.getversion())"
+    "import mosek.fusion.pythonic\n",
+    "print(\"MOSEK version\", Model.getVersion())"
    ]
   },
   {
@@ -151,7 +152,7 @@
     "    \n",
     "    M.objective(ObjectiveSense.Minimize, t)\n",
     "    \n",
-    "    res = Expr.sub(Expr.mul(X,w), y)\n",
+    "    res = X @ w - y\n",
     "    M.constraint(Expr.vstack(t, res), Domain.inQCone())\n",
     "    \n",
     "    #M.setLogHandler(sys.stdout)\n",
@@ -255,9 +256,9 @@
     "    \n",
     "    M.objective(ObjectiveSense.Minimize, Expr.sum(t))\n",
     "    \n",
-    "    res = Expr.sub(Expr.mul(X,w), y)\n",
-    "    M.constraint(Expr.sub(t, res), Domain.greaterThan(0))\n",
-    "    M.constraint(Expr.add(t, res), Domain.greaterThan(0))\n",
+    "    res = X @ w - y\n",
+    "    M.constraint(t >= res)\n",
+    "    M.constraint(t >= -res)\n",
     "    \n",
     "    #M.setLogHandler(sys.stdout)\n",
     "    M.solve()\n",
@@ -329,9 +330,9 @@
     "    \n",
     "    M.objective(ObjectiveSense.Minimize, t)\n",
     "    \n",
-    "    M.constraint(Expr.sub(Expr.sum(s),t), Domain.equalsTo(0))\n",
+    "    M.constraint(t == Expr.sum(s))\n",
     "    \n",
-    "    res = Expr.sub(Expr.mul(X,w), y)\n",
+    "    res = X @ w - y\n",
     "    M.constraint(Expr.hstack(s, Var.repeat(t,n), res), Domain.inPPowerCone(1.0/p))\n",
     "    \n",
     "    #M.setLogHandler(sys.stdout)\n",
@@ -413,9 +414,9 @@
     "    \n",
     "    M.objective(ObjectiveSense.Minimize, Expr.sum(t))\n",
     "    \n",
-    "    res = Expr.sub(Expr.mul(X,w), y)\n",
-    "    M.constraint(Expr.sub(t, res), Domain.greaterThan(-a))\n",
-    "    M.constraint(Expr.add(t, res), Domain.greaterThan(-a))\n",
+    "    res = X @ w - y\n",
+    "    M.constraint(t >= res - a)\n",
+    "    M.constraint(t >= -res - a)\n",
     "    \n",
     "    #M.setLogHandler(sys.stdout)\n",
     "    M.solve()\n",
@@ -488,10 +489,10 @@
     "    \n",
     "    M.objective(ObjectiveSense.Minimize, t)\n",
     "    \n",
-    "    res = Expr.sub(Expr.mul(X,w), y)\n",
+    "    res = X @ w - y\n",
     "    t_repeat = Var.repeat(t,n)\n",
-    "    M.constraint(Expr.sub(t_repeat, res), Domain.greaterThan(0))\n",
-    "    M.constraint(Expr.add(t_repeat, res), Domain.greaterThan(0))\n",
+    "    M.constraint(t_repeat >= res)\n",
+    "    M.constraint(t_repeat >= -res)\n",
     "    \n",
     "    #M.setLogHandler(sys.stdout)\n",
     "    M.solve()\n",
@@ -562,12 +563,12 @@
     "    s = M.variable()\n",
     "    u = M.variable(n, Domain.greaterThan(0))\n",
     "    \n",
-    "    M.objective(ObjectiveSense.Minimize, Expr.add(Expr.sum(u), Expr.mul(k,s)))\n",
+    "    M.objective(ObjectiveSense.Minimize, Expr.sum(u) + k * s)\n",
     "    \n",
-    "    res = Expr.sub(Expr.mul(X,w), y)\n",
-    "    lhs = Expr.add(u, Var.repeat(s,n))\n",
-    "    M.constraint(Expr.sub(lhs, res), Domain.greaterThan(0))\n",
-    "    M.constraint(Expr.add(lhs, res), Domain.greaterThan(0))\n",
+    "    res = X @ w - y\n",
+    "    lhs = u + Var.repeat(s,n)\n",
+    "    M.constraint(lhs >= res)\n",
+    "    M.constraint(lhs >= -res)\n",
     "    \n",
     "    #M.setLogHandler(sys.stdout)\n",
     "    M.solve()\n",
@@ -608,7 +609,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -622,7 +623,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
