--- a/sinr-optimization/sinr-optimization.ipynb
+++ b/sinr-optimization/sinr-optimization.ipynb
@@ -111,6 +111,7 @@
     "import sys\n",
     "import numpy as np\n",
     "from mosek.fusion import *\n",
+    "import mosek.fusion.pythonic\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -122,10 +123,10 @@
    "source": [
     "def logsumexp(M, A, x, b):    \n",
     "    u = M.variable(A.shape[0])\n",
-    "    M.constraint( Expr.sum(u), Domain.lessThan(1.0))\n",
+    "    M.constraint( Expr.sum(u) <= 1.0)\n",
     "    M.constraint( Expr.hstack(u,\n",
     "                              Expr.constTerm(A.shape[0], 1.0),\n",
-    "                              Expr.add(Expr.mul(A, x), b)), Domain.inPExpCone())"
+    "                              A @ x + b), Domain.inPExpCone())"
    ]
   },
   {
@@ -138,7 +139,7 @@
     "    n = G.shape[0]\n",
     "    with Model('MAX_WORST_SINR') as M:\n",
     "        qz = M.variable('qz', n+1) # concatenation of q and z\n",
-    "        M.objective('Objective',ObjectiveSense.Minimize,Expr.neg(qz.index(n)))\n",
+    "        M.objective('Objective', ObjectiveSense.Minimize, -qz[n])\n",
     "        for i in range(n):\n",
     "            A = np.zeros((n,n+1))\n",
     "            b = np.zeros(n)\n",
@@ -151,7 +152,7 @@
     "            idx = np.nonzero(b)[0] \n",
     "            logsumexp(M, A[idx,:], qz, np.log(b[idx]))\n",
     "    \n",
-    "        logsumexp(M, np.eye(n), qz.slice(0,n), -np.log(P)*np.ones(n))\n",
+    "        logsumexp(M, np.eye(n), qz[:n], -np.log(P)*np.ones(n))\n",
     "        M.setLogHandler(sys.stdout)\n",
     "\n",
     "        M.solve()\n",
@@ -387,7 +388,7 @@
     "            \n",
     "        logsumexp(M,np.eye(n),q,-np.log(P)*np.ones(n))\n",
     "        \n",
-    "        M.constraint(Expr.hstack(x,Expr.constTerm(n, 1.0),Expr.neg(t)),Domain.inPExpCone())\n",
+    "        M.constraint(Expr.hstack(x, Expr.constTerm(n, 1.0), -t), Domain.inPExpCone())\n",
     "        M.objective('Objective',ObjectiveSense.Minimize,Expr.sum(x))\n",
     "        \n",
     "        for i in range(n):\n",
@@ -399,7 +400,7 @@
     "            A[i,[i,n]] = [-1,1]\n",
     "            b[i] = sigma[i]/G[i,i]\n",
     "            idx = np.nonzero(b)[0]\n",
-    "            logsumexp(M,A[idx,:],Expr.vstack(q,t.index(i)),np.log(b[idx]))\n",
+    "            logsumexp(M,A[idx,:],Expr.vstack(q,t[i]),np.log(b[idx]))\n",
     "        \n",
     "        M.setLogHandler(sys.stdout)\n",
     "\n",
@@ -582,7 +583,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -596,7 +597,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
