--- a/stochastic-risk/stochastic-risk-measures.ipynb
+++ b/stochastic-risk/stochastic-risk-measures.ipynb
@@ -62,6 +62,7 @@
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "from mosek.fusion import *\n",
+    "import mosek.fusion.pythonic\n",
     "import numpy as np \n",
     "import sys, os, csv\n",
     "\n",
@@ -108,14 +109,14 @@
     "    eta = M.variable('eta')\n",
     "\n",
     "    # The bounds w_j + r_j^Tx + eta \\geq 0\n",
-    "    M.constraint(Expr.add([W, Expr.mul(np.transpose(r), X), Var.vrepeat(eta, m)]), Domain.greaterThan(0.0))\n",
+    "    M.constraint(W + r.T @ X + Var.vrepeat(eta, m) >= 0)\n",
     "    # Minimal risk\n",
-    "    M.constraint(Expr.dot(X, np.matmul(r,p)), Domain.greaterThan(rbar)) \n",
+    "    M.constraint(X.T @ (r @ p) >= rbar) \n",
     "    # Budget\n",
-    "    M.constraint(Expr.sum(X), Domain.lessThan(1.0))\n",
+    "    M.constraint(Expr.sum(X) <= 1.0)\n",
     "\n",
     "    # Set the objective \n",
-    "    M.objective(ObjectiveSense.Minimize, Expr.add(eta, Expr.mul(1/(1-alpha), Expr.dot(p, W))))\n",
+    "    M.objective(ObjectiveSense.Minimize, eta + W.T @ p / (1-alpha))\n",
     "\n",
     "    return M"
    ]
@@ -167,18 +168,18 @@
     "    t   = M.variable('t') \n",
     "\n",
     "    # The log-sum-exp constraint\n",
-    "    M.constraint(Expr.dot(p, xi), Domain.lessThan(1.0)) \n",
+    "    M.constraint(xi.T @ p <= 1.0) \n",
     "    # Stack allcones together - every row has the form (xi_j, 1, w_j-t)\n",
     "    # The matrix notation means that every row belongs to the cone\n",
-    "    M.constraint(Expr.hstack(xi, Expr.constTerm(m, 1.0), Expr.sub(W, Var.vrepeat(t, m))), Domain.inPExpCone())\n",
+    "    M.constraint(Expr.hstack(xi, Expr.constTerm(m, 1.0), W - Var.vrepeat(t, m)), Domain.inPExpCone())\n",
     "\n",
     "    # Continue with the linear constraints\n",
-    "    M.constraint(Expr.add([W, Expr.mul(np.transpose(r), X), Var.vrepeat(eta, m)]), Domain.greaterThan(0.0))\n",
-    "    M.constraint(Expr.dot(X, np.matmul(r,p)), Domain.greaterThan(rbar)) \n",
-    "    M.constraint(Expr.sum(X), Domain.lessThan(1.0))\n",
+    "    M.constraint(W + r.T @ X + Var.vrepeat(eta, m) >= 0)\n",
+    "    M.constraint(X.T @ (r @ p) >= rbar) \n",
+    "    M.constraint(Expr.sum(X) <= 1.0)\n",
     "\n",
     "    # Set the objective \n",
-    "    M.objective(ObjectiveSense.Minimize, Expr.add(eta, Expr.mul(1/(1-alpha), t)))\n",
+    "    M.objective(ObjectiveSense.Minimize, eta + t / (1-alpha))\n",
     "\n",
     "    return M"
    ]
@@ -222,16 +223,16 @@
     "    t   = M.variable('t') \n",
     "\n",
     "    # The power cones representing the q-norm constraint\n",
-    "    M.constraint(Expr.sub(t, Expr.sum(xi)), Domain.equalsTo(0.0)) \n",
+    "    M.constraint(t == Expr.sum(xi)) \n",
     "    M.constraint(Expr.hstack(Var.vrepeat(t, m), xi, Expr.mulElm(np.power(p, 1.0/q), W)), Domain.inPPowerCone(1.0-1.0/q))\n",
     "\n",
     "    # Continue with the linear constraints\n",
-    "    M.constraint(Expr.add([W, Expr.mul(np.transpose(r), X), Var.vrepeat(eta, m)]), Domain.greaterThan(0.0))\n",
-    "    M.constraint(Expr.dot(X, np.matmul(r,p)), Domain.greaterThan(rbar)) \n",
-    "    M.constraint(Expr.sum(X), Domain.lessThan(1.0))\n",
+    "    M.constraint(W + r.T @ X + Var.vrepeat(eta, m) >= 0)\n",
+    "    M.constraint(X.T @ (r @ p) >= rbar) \n",
+    "    M.constraint(Expr.sum(X) <= 1.0)\n",
     "\n",
     "    # Set the objective \n",
-    "    M.objective(ObjectiveSense.Minimize, Expr.add(eta, Expr.mul(1/(1-alpha), t)))\n",
+    "    M.objective(ObjectiveSense.Minimize, eta + t / (1-alpha))\n",
     "\n",
     "    return M"
    ]
@@ -333,7 +334,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -347,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
