--- a/surfacecycles/surfaceCycles.ipynb
+++ b/surfacecycles/surfaceCycles.ipynb
@@ -37,6 +37,7 @@
     "%matplotlib notebook\n",
     "import mosek                             \n",
     "from mosek.fusion import *\n",
+    "import mosek.fusion.pythonic\n",
     "import numpy as np \n",
     "import sys, io, math, plyfile\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
@@ -163,15 +164,15 @@
     "    #Plot the surface and a number of chains\n",
     "    def plot(self, chains=[], colors=[]):\n",
     "        fig = plt.figure()\n",
-    "        ax = fig.gca(projection='3d')\n",
-    "        ax.plot_trisurf(self.xc, self.yc, self.zc, triangles=self.tri, linewidth=0.5, alpha=1.0, edgecolor='green')\n",
+    "        ax = plt.axes(projection='3d',computed_zorder=False)\n",
+    "        ax.plot_trisurf(self.xc, self.yc, self.zc, triangles=self.tri, linewidth=0.5, alpha=0.5, edgecolor='green')\n",
     "        i = 0\n",
     "        for C in chains:\n",
     "            for j in range(self.e):\n",
     "                if abs(C[j])>0.0001:\n",
     "                    # Extract the edge and plot with intensity depending on its coefficient in C\n",
     "                    xc,yc,zc = zip(*[ self.coo[self.edg[j][0]], self.coo[self.edg[j][1]] ])\n",
-    "                    ax.plot(xc, yc, zc, color=colors[i], alpha=min(1,abs(C[j])))\n",
+    "                    ax.plot(xc, yc, zc, color=colors[i], alpha=min(1,abs(C[j])), zorder=1)\n",
     "            i += 1\n",
     "        plt.axis('off')\n",
     "        plt.show()\n",
@@ -185,14 +186,14 @@
     "            y    = M.variable(self.t, Domain.unbounded())                # a 2-chain whose boundary is x-C\n",
     "\n",
     "            # -xabs <= x <= xabs\n",
-    "            M.constraint(Expr.add(xabs, x), Domain.greaterThan(0))\n",
-    "            M.constraint(Expr.sub(xabs, x), Domain.greaterThan(0))\n",
+    "            M.constraint(xabs >= x)\n",
+    "            M.constraint(xabs >= -x)\n",
     "\n",
     "            # x - c = D2*y, so x-c is a boundary\n",
-    "            M.constraint(Expr.sub(Expr.sub(x, C), Expr.mul(self.D2, y)), Domain.equalsTo(0))\n",
+    "            M.constraint(x - C == self.D2 @ y)\n",
     "\n",
     "            # min weighted 1-norm of x\n",
-    "            M.objective(ObjectiveSense.Minimize, Expr.dot(self.wgh, xabs))\n",
+    "            M.objective(ObjectiveSense.Minimize, xabs.T @ self.wgh)\n",
     "\n",
     "            # solve\n",
     "            M.solve()\n",
@@ -3502,7 +3503,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3516,7 +3517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
