--- a/unitcommitment/ucp.ipynb
+++ b/unitcommitment/ucp.ipynb
@@ -51,7 +51,8 @@
     "import matplotlib.cm as cm\n",
     "import numpy as np\n",
     "import sys\n",
-    "from mosek.fusion import *"
+    "from mosek.fusion import *\n",
+    "import mosek.fusion.pythonic"
    ]
   },
   {
@@ -89,10 +90,7 @@
     "        self.u = self.M.variable([self.N, self.T+1], Domain.binary())   \n",
     "        # Is at startup? --- v_ih >= u_ih-u_(i-1)h\n",
     "        self.v = self.M.variable([self.N, self.T+1], Domain.binary())   \n",
-    "        self.M.constraint(Expr.sub(\n",
-    "                            self.v.slice([0,1],[N,T+1]), \n",
-    "                            Expr.sub(self.u.slice([0,1], [N,T+1]), self.u.slice([0,0], [N,T]))), \n",
-    "                          Domain.greaterThan(0.0))"
+    "        self.M.constraint(self.v[:,1:] >= self.u[:,1:] - self.u[:,:-1])"
    ]
   },
   {
@@ -138,10 +136,10 @@
     "def consProd(ucp, pmin, pmax, demand):\n",
     "    N, T, p, u, v = ucp.N, ucp.T, ucp.p, ucp.u, ucp.v\n",
     "    # Maximal and minimal production of each unit\n",
-    "    ucp.M.constraint(Expr.sub(p, Expr.mulElm(repeat(pmax, T+1), u)), Domain.lessThan(0.0))\n",
-    "    ucp.M.constraint(Expr.sub(p, Expr.mulElm(repeat(pmin, T+1), u)), Domain.greaterThan(0.0))\n",
+    "    ucp.M.constraint(p <= Expr.mulElm(repeat(pmax, T+1), u))\n",
+    "    ucp.M.constraint(p >= Expr.mulElm(repeat(pmin, T+1), u))\n",
     "    # Total demand in periods is achieved\n",
-    "    ucp.M.constraint(Expr.sum(p, 0).slice(1,T+1), Domain.greaterThan(demand))"
+    "    ucp.M.constraint(Expr.sum(p, 0)[1:], Domain.greaterThan(demand))"
    ]
   },
   {
@@ -171,9 +169,9 @@
     "# Ramp constraints \n",
     "def consRamp(ucp, rdown, rup):\n",
     "    N, T, p, u, v = ucp.N, ucp.T, ucp.p, ucp.u, ucp.v\n",
-    "    Delta = Expr.sub(p.slice([0,1], [N,T+1]), p.slice([0,0], [N,T]))\n",
-    "    ucp.M.constraint(Delta, Domain.lessThan(repeat(rup, T)))\n",
-    "    ucp.M.constraint(Delta, Domain.greaterThan(-repeat(rdown, T)))"
+    "    Delta = p[:,1:] - p[:,:-1]\n",
+    "    ucp.M.constraint(Delta <= repeat(rup, T))\n",
+    "    ucp.M.constraint(Delta >= -repeat(rdown, T))"
    ]
   },
   {
@@ -195,8 +193,8 @@
     "def consInit(ucp, p0, u0, l0):\n",
     "    N, T, p, u, v = ucp.N, ucp.T, ucp.p, ucp.u, ucp.v\n",
     "    # Fix production in the immediately preceeding period\n",
-    "    ucp.M.constraint(p.slice([0,0],[N,1]), Domain.equalsTo(p0).withShape([N,1]))\n",
-    "    ucp.M.constraint(u.slice([0,0],[N,1]), Domain.equalsTo(u0).withShape([N,1]))"
+    "    ucp.M.constraint(Var.flatten(p[:,0]) == p0)\n",
+    "    ucp.M.constraint(Var.flatten(u[:,0]) == u0)"
    ]
   },
   {
@@ -229,27 +227,17 @@
     "    for unit in range(N):\n",
     "        # First, take care of neighbourhood of initial conditions\n",
     "        if u0[unit] == 0 and l0[unit] < mdown[unit]:\n",
-    "            ucp.M.constraint(u.slice([unit,1],[unit+1,mdown[unit]-l0[unit]+1]), Domain.equalsTo(0))\n",
+    "            ucp.M.constraint(u[unit,1:mdown[unit]-l0[unit]+1] == 0)\n",
     "        if u0[unit] == 1 and l0[unit] < mup[unit]:\n",
-    "            ucp.M.constraint(u.slice([unit,1],[unit+1,mup[unit]-l0[unit]+1]), Domain.equalsTo(1))\n",
+    "            ucp.M.constraint(u[unit,1:mup[unit]-l0[unit]+1] == 1)\n",
     "        # If we are off in i and i+w (w<mup), we must be off in between:\n",
     "        for w in range(1,mup[unit]):\n",
     "            for s in range(1,w):\n",
-    "                ucp.M.constraint(\n",
-    "                    Expr.sub(\n",
-    "                        Expr.add(u.slice([unit,0],[unit+1,T-w+1]), \n",
-    "                                 u.slice([unit,w],[unit+1,T+1])),\n",
-    "                        u.slice([unit,s],[unit+1,T-w+1+s])),\n",
-    "                    Domain.greaterThan(0))\n",
+    "                ucp.M.constraint(u[unit,0:T-w+1] + u[unit,w:T+1] >= u[unit,s:T-w+1+s])\n",
     "        # If we are on in i and i+w (w<mdown), we must be on in between:\n",
     "        for w in range(1,mdown[unit]):\n",
     "            for s in range(1,w):\n",
-    "                ucp.M.constraint(\n",
-    "                    Expr.sub(\n",
-    "                        Expr.add(u.slice([unit,0],[unit+1,T-w+1]), \n",
-    "                                 u.slice([unit,w],[unit+1,T+1])),\n",
-    "                        u.slice([unit,s],[unit+1,T-w+1+s])),\n",
-    "                    Domain.lessThan(1))"
+    "                ucp.M.constraint(u[unit,0:T-w+1] + u[unit,w:T+1] <= u[unit,s:T-w+1+s] + 1)"
    ]
   },
   {
@@ -281,15 +269,15 @@
     "def objective(ucp, a, b, c, fx, sc, onlyLinear=False):\n",
     "    N, T, p, u, v = ucp.N, ucp.T, ucp.p, ucp.u, ucp.v\n",
     "    # Startup costs and fixed operating costs\n",
-    "    scCost = Expr.dot(v.slice([0,1],[N,T+1]), repeat(sc, T))\n",
-    "    fxCost = Expr.dot(u.slice([0,1],[N,T+1]), repeat(fx, T))\n",
+    "    scCost = Expr.dot(v[:,1:], repeat(sc, T))\n",
+    "    fxCost = Expr.dot(u[:,1:], repeat(fx, T))\n",
     "    # Linear part of production cost bp\n",
-    "    bCost = Expr.sum(Expr.mul(b, p.slice([0,1],[N,T+1])))\n",
+    "    bCost = Expr.sum(b * p[:,1:])\n",
     "    allCosts = [bCost, Expr.constTerm(sum(c)*ucp.T), fxCost, scCost]\n",
     "    # Quadratic part of production cost ap^2\n",
     "    if not onlyLinear:\n",
     "        t = ucp.M.variable(ucp.N) \n",
-    "        ucp.M.constraint(Expr.hstack(Expr.constTerm(N, 0.5), t, p.slice([0,1],[N,T+1])), Domain.inRotatedQCone())\n",
+    "        ucp.M.constraint(Expr.hstack(Expr.constTerm(N, 0.5), t, p[:,1:]), Domain.inRotatedQCone())\n",
     "        aCost = Expr.dot(a, t)\n",
     "        allCosts.append(aCost)\n",
     "    # Total\n",
@@ -533,8 +521,7 @@
     "np.random.seed(0)\n",
     "def consSOff(ucp, num):\n",
     "    N, T, p, u, v = ucp.N, ucp.T, ucp.p, ucp.u, ucp.v   \n",
-    "    ucp.M.constraint(u.pick(list(np.random.randint(0,N,size=num)), list(np.random.randint(5,T,size=num))), \n",
-    "        Domain.equalsTo(0.0))"
+    "    ucp.M.constraint(u[list(zip(np.random.randint(0,N,size=num), np.random.randint(5,T,size=num)))] == 0)"
    ]
   },
   {
@@ -644,7 +631,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -658,7 +645,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
