--- a/binary-quadratic/binquad.ipynb
+++ b/binary-quadratic/binquad.ipynb
@@ -115,12 +115,12 @@
     "    n = len(P)\n",
     "    M = Model(\"fusionSDP\")\n",
     "    Z = M.variable(\"Z\", Domain.inPSDCone(n+1))\n",
-    "    X = Z.slice([0,0], [n,n])\n",
-    "    x = Z.slice([0,n], [n,n+1])\n",
-    "    M.constraint(Expr.sub(X.diag(), x), Domain.equalsTo(0.))\n",
-    "    M.constraint(Z.index(n,n), Domain.equalsTo(1.))\n",
+    "    X = Z[0:n,0:n]\n",
+    "    x = Z[0:n,n]\n",
+    "    M.constraint(X.diag() == x)\n",
+    "    M.constraint(Z[n,n] == 1)\n",
     "\n",
-    "    M.objective(ObjectiveSense.Minimize, Expr.add([Expr.constTerm(R), Expr.dot(P,x), Expr.dot(Q,X)]))\n",
+    "    M.objective(ObjectiveSense.Minimize, Expr.constTerm(R) + Expr.dot(P,x) + Expr.dot(Q,X))\n",
     "\n",
     "    return M, x"
    ]
@@ -323,7 +323,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -337,7 +337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
