--- a/dist-robust-portfolio/Data-driven_distributionally_robust_portfolio.ipynb
+++ b/dist-robust-portfolio/Data-driven_distributionally_robust_portfolio.ipynb
@@ -215,26 +215,23 @@
     "        t = M.variable('Tau')\n",
     "        ##### OBJECTIVE #####\n",
     "        # certificate = lamda*epsilon + sum(s)/N\n",
-    "        certificate = Expr.add(Expr.mul(eps, l),\n",
-    "                               Expr.mul(1/N, Expr.sum(s)))\n",
+    "        certificate = eps * l + Expr.sum(s) / N\n",
     "        M.objective('J_N(e)', ObjectiveSense.Minimize, certificate)\n",
     "        ##### CONSTRAINTS #####\n",
     "        # b_k*t\n",
-    "        e1 = Expr.transpose(Expr.repeat(Expr.mul(t, b_k), N, 1))\n",
+    "        e1 = Expr.repeat(t * b_k, N, 1).T\n",
     "        # a_k*<x,xi>\n",
-    "        e2 = Expr.hstack([Expr.mul(a_k[i], Expr.mul(dat, x))\n",
-    "                          for i in range(2)])\n",
+    "        e2 = Expr.hstack([a_k[i] * (dat @ x) for i in range(2)])\n",
     "        # b_k*t + a_k*<x,xi> <= s\n",
-    "        M.constraint('C1', Expr.add(\n",
-    "            [e1, e2, Expr.neg(Expr.repeat(s, 2, 1))]), Domain.lessThan(0.0))\n",
+    "        M.constraint('C1', e1 + e2 <= Expr.repeat(s, 2, 1))\n",
     "        # a_k*x\n",
-    "        e3 = Expr.hstack([Expr.mul(a_k[i], x) for i in range(2)])\n",
+    "        e3 = Expr.hstack([a_k[i] * x for i in range(2)])\n",
     "        e4 = Expr.repeat(Expr.repeat(l, m, 0), 2, 1)\n",
     "        # ||a_k*x||_infty <= lambda\n",
-    "        M.constraint('C2_pos', Expr.sub(e3, e4), Domain.lessThan(0.0))\n",
-    "        M.constraint('C2_neg', Expr.add(e3, e4), Domain.greaterThan(0.0))\n",
+    "        M.constraint('C2_pos', e4 >= e3)\n",
+    "        M.constraint('C2_neg', e4 >= -e3)\n",
     "        # x \\in X\n",
-    "        M.constraint('C3', Expr.sum(x), Domain.equalsTo(1.0))\n",
+    "        M.constraint('C3', Expr.sum(x) == 1)\n",
     "        # Use the simplex optimizer\n",
     "        M.setSolverParam('optimizer', 'freeSimplex')\n",
     "        return M\n",
@@ -322,6 +319,7 @@
    "source": [
     "import numpy as np\n",
     "from mosek.fusion import Model, Expr, Domain, ObjectiveSense\n",
+    "import mosek.fusion.pythonic\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.special import erfinv\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -1002,7 +1000,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1016,7 +1014,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
