--- a/f-sparc/fsparc.ipynb
+++ b/f-sparc/fsparc.ipynb
@@ -117,6 +117,7 @@
    "outputs": [],
    "source": [
     "from mosek.fusion import *\n",
+    "import mosek.fusion.pythonic\n",
     "from math import log\n",
     "\n",
     "def fsparc_model(n, d):\n",
@@ -130,10 +131,10 @@
     "    t = M.variable('t', 1, Domain.inRange(1.0/P, 1.0/SIGMA))        \n",
     "\n",
     "    # add linear constraints\n",
-    "    M.constraint(Expr.sum(x, 1), Domain.lessThan(1.0))              \n",
-    "    M.constraint(Expr.add(Expr.mul(SIGMA, t), Expr.sum(p_tilde)), Domain.equalsTo(1.0))\n",
-    "    M.constraint(Expr.sub(p_tilde, x), Domain.lessThan(0.0))                            \n",
-    "    M.constraint(Expr.sub(Expr.sum(z, 0), Expr.mulElm(Expr.repeat(t, J, 0), d)), Domain.greaterThan(0.0))\n",
+    "    M.constraint(Expr.sum(x, 1) <= 1.0)\n",
+    "    M.constraint(SIGMA * t + Expr.sum(p_tilde) == 1.0)\n",
+    "    M.constraint(p_tilde <= x)\n",
+    "    M.constraint(Expr.sum(z, 0) >= Expr.mulElm(Expr.repeat(t, J, 0), d))\n",
     "    \n",
     "    # objective\n",
     "    M.objective(\"obj\", ObjectiveSense.Maximize, Expr.sum(z))\n",
@@ -141,7 +142,7 @@
     "    # add conic constraint\n",
     "    p_over_n = Expr.mulElm(p_tilde, [[1 / n_i] * J for n_i in n])\n",
     "    multi_t = Expr.repeat(Expr.repeat(t, I, 0), J, 1)\n",
-    "    M.constraint(Expr.stack(2, Expr.add(multi_t, p_over_n), multi_t, Expr.mul(log(2.0) / BW, z)), \n",
+    "    M.constraint(Expr.stack(2, multi_t + p_over_n, multi_t, z * (log(2.0) / BW)), \n",
     "                 Domain.inPExpCone())\n",
     "    \n",
     "    return M\n"
@@ -458,7 +459,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -472,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
