--- a/filterdesign/filterdesign.ipynb
+++ b/filterdesign/filterdesign.ipynb
@@ -47,6 +47,7 @@
    "source": [
     "import mosek\n",
     "from   mosek.fusion import *\n",
+    "import mosek.fusion.pythonic\n",
     "from   math import cos, pi\n",
     "import numpy as np\n",
     "import sys"
@@ -109,7 +110,7 @@
     "    X = M.variable(\"X\", Domain.inPSDCone(n+1))\n",
     "    \n",
     "    for i in range(n+1):\n",
-    "        M.constraint(Expr.sub(T_dot_X(n+1,i,X), x.index(i)), Domain.equalsTo(0.0))"
+    "        M.constraint(T_dot_X(n+1,i,X) == x[i])"
    ]
   },
   {
@@ -158,11 +159,8 @@
     "    X2 = M.variable(Domain.inPSDCone(n))\n",
     "\n",
     "    for i in range(n+1):\n",
-    "        M.constraint(Expr.sub(Expr.add([ T_dot_X(n+1,i,X1), \n",
-    "                                         T_dot_X(n,i+1,X2), \n",
-    "                                         T_dot_X(n,i-1,X2), \n",
-    "                                         T_dot_X(n,i,X2,-2*cos(a))]),\n",
-    "                              x.index(i)), Domain.equalsTo(0.0))"
+    "        M.constraint(T_dot_X(n+1,i,X1) + T_dot_X(n,i+1,X2) + \\\n",
+    "                     T_dot_X(n,i-1,X2) + T_dot_X(n,i,X2,-2*cos(a)) == x[i])"
    ]
   },
   {
@@ -211,12 +209,8 @@
     "    X2 = M.variable(Domain.inPSDCone(n))\n",
     "\n",
     "    for i in range(n+1):\n",
-    "        M.constraint(Expr.add([ T_dot_X(n+1,i,X1), \n",
-    "                                T_dot_X(n,i+1,X2,-1.0), \n",
-    "                                T_dot_X(n,i-1,X2,-1.0), \n",
-    "                                T_dot_X(n,i,X2,2*cos(a)),\n",
-    "                                Expr.neg(x.index(i))    ]),\n",
-    "                     Domain.equalsTo(0.0))"
+    "        M.constraint(T_dot_X(n+1,i,X1) + T_dot_X(n,i+1,X2,-1.0) + \\\n",
+    "                     T_dot_X(n,i-1,X2,-1.0) + T_dot_X(n,i,X2,2*cos(a)) == x[i])"
    ]
   },
   {
@@ -246,8 +240,8 @@
     "         H(w) = x0 + 2*x1*cos(w) + 2*x2*cos(2*w) + ... + 2*xn*cos(n*w)'''\n",
     "    n  = int(x.getSize()-1)    \n",
     "    u = M.variable(n+1, Domain.unbounded())\n",
-    "    M.constraint(Expr.sub(t,Expr.add(x.index(0), u.index(0))), Domain.equalsTo(0.0)) \n",
-    "    M.constraint(Expr.add(x.slice(1,n+1), u.slice(1,n+1)), Domain.equalsTo(0.0))\n",
+    "    M.constraint(t == x[0] + u[0]) \n",
+    "    M.constraint(x[1:] + u[1:] == 0)\n",
     "    \n",
     "    if a==0.0 and b==pi:\n",
     "        trigpoly_0_pi(M, u)\n",
@@ -280,8 +274,8 @@
     "\n",
     "    n  = int(x.getSize()-1)    \n",
     "    u0 = M.variable(1, Domain.unbounded())    \n",
-    "    M.constraint(Expr.sub(t,Expr.sub(x.index(0), u0)), Domain.equalsTo(0.0))\n",
-    "    u = Var.vstack( u0, x.slice(1, n+1) )\n",
+    "    M.constraint(t == x[0] - u0)\n",
+    "    u = Var.vstack( u0, x[1:] )\n",
     "\n",
     "    if a==0.0 and b==pi:\n",
     "        trigpoly_0_pi(M, u)\n",
@@ -575,7 +569,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -589,7 +583,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
