--- a/leastsquares/regression-leastsquares.ipynb
+++ b/leastsquares/regression-leastsquares.ipynb
@@ -41,6 +41,7 @@
    "outputs": [],
    "source": [
     "from mosek.fusion import *\n",
+    "import mosek.fusion.pythonic\n",
     "import numpy, sys\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
@@ -90,7 +91,7 @@
     "    \n",
     "    # The bound on the norm of the residual\n",
     "    t = M.variable(\"t\")\n",
-    "    r = Expr.sub(y, Expr.mul(X,w))\n",
+    "    r = y - X @ w\n",
     "    # t \\geq |r|_2\n",
     "    M.constraint(Expr.vstack(t, r), Domain.inQCone())\n",
     "\n",
@@ -140,8 +141,8 @@
     "# Plot the data points, original function (black) and regression function (red)\n",
     "plt.scatter(x,y)\n",
     "ticks = numpy.linspace(0, 1, 100)\n",
-    "plt.plot(ticks, f(ticks), 'k', color='black')\n",
-    "plt.plot(ticks, sum([w[i]*ticks**i for i in range(4)]), 'k', color='red')\n",
+    "plt.plot(ticks, f(ticks), color='black')\n",
+    "plt.plot(ticks, sum([w[i]*ticks**i for i in range(4)]), color='red')\n",
     "plt.show()\n"
    ]
   },
@@ -198,11 +199,11 @@
     "    plasso = M.variable(\"plasso\")\n",
     "    \n",
     "    # plasso >= sum(p_i)\n",
-    "    M.constraint(Expr.sub(plasso, Expr.sum(p)), Domain.greaterThan(0.0))\n",
+    "    M.constraint(plasso >= Expr.sum(p))\n",
     "    \n",
     "    # p_i = |w_i|\n",
-    "    M.constraint(Expr.add(p,w), Domain.greaterThan(0.0))\n",
-    "    M.constraint(Expr.sub(p,w), Domain.greaterThan(0.0))\n",
+    "    M.constraint(p >= w)\n",
+    "    M.constraint(p >= -w)\n",
     "    \n",
     "    return plasso\n",
     "\n",
@@ -222,14 +223,14 @@
     "    \n",
     "    # The bound on the norm of the residual\n",
     "    t = M.variable(\"t\")\n",
-    "    r = Expr.sub(y, Expr.mul(X,w))\n",
+    "    r = y - X @ w\n",
     "    # t \\geq |r|_2^2\n",
     "    M.constraint(Expr.vstack(0.5, t, r), Domain.inRotatedQCone())\n",
     "    \n",
     "    # The objective, add regularization terms as required\n",
     "    objExpr = t.asExpr()\n",
-    "    if lambda1 != 0: objExpr = Expr.add(objExpr, Expr.mul(lambda1, lassoVar(M,w,d)))\n",
-    "    if lambda2 != 0: objExpr = Expr.add(objExpr, Expr.mul(lambda2, ridgeVar(M,w)))\n",
+    "    if lambda1 != 0: objExpr = objExpr + lambda1 * lassoVar(M,w,d)\n",
+    "    if lambda2 != 0: objExpr = objExpr + lambda2 * ridgeVar(M,w)\n",
     "    M.objective(ObjectiveSense.Minimize, objExpr)\n",
     "    return M"
    ]
@@ -353,15 +354,15 @@
     "    v = M.variable(n, Domain.greaterThan(0.0))\n",
     "    \n",
     "    # The residual and bounds on its absolute value (coordinatewise)\n",
-    "    r = Expr.sub(y, Expr.mul(X,w))\n",
-    "    ab= Expr.add(u,v)\n",
-    "    M.constraint(Expr.add(ab,r), Domain.greaterThan(0.0))\n",
-    "    M.constraint(Expr.sub(ab,r), Domain.greaterThan(0.0))\n",
+    "    r = y - X @ w\n",
+    "    ab= u + v\n",
+    "    M.constraint(ab >= r)\n",
+    "    M.constraint(ab >= -r)\n",
     "    \n",
     "    # t >= |u|_2^2 and the objective\n",
     "    t = M.variable()\n",
     "    M.constraint(Expr.vstack(0.5, t, u), Domain.inRotatedQCone())\n",
-    "    M.objective(ObjectiveSense.Minimize, Expr.add(t, Expr.mul(2*MConst, Expr.sum(v))))\n",
+    "    M.objective(ObjectiveSense.Minimize, t + 2 * MConst * Expr.sum(v))\n",
     "    return M"
    ]
   },
@@ -413,8 +414,8 @@
     "# Plot the data points, LSE approximation (blue) and Huber approximation (red)\n",
     "plt.scatter(x,y)\n",
     "ticks = numpy.linspace(0, 1, 100)\n",
-    "plt.plot(ticks, sum([wLSE[i]*ticks**i for i in range(4)]), 'k', color='blue')\n",
-    "plt.plot(ticks, sum([wHUB[i]*ticks**i for i in range(4)]), 'k', color='red')\n",
+    "plt.plot(ticks, sum([wLSE[i]*ticks**i for i in range(4)]), color='blue')\n",
+    "plt.plot(ticks, sum([wHUB[i]*ticks**i for i in range(4)]), color='red')\n",
     "plt.show()"
    ]
   },
@@ -438,7 +439,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -452,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
