--- a/minimum-ellipsoid/minimum-ellipsoid.ipynb
+++ b/minimum-ellipsoid/minimum-ellipsoid.ipynb
@@ -142,12 +142,13 @@
    "outputs": [],
    "source": [
     "from mosek.fusion import *\n",
+    "import mosek.fusion.pythonic\n",
     "import mosek as msk\n",
     "\n",
     "\n",
     "def primal_problem(P):\n",
     "\n",
-    "    print(msk.Env.getversion())\n",
+    "    print(Model.getVersion())\n",
     "    \n",
     "    k= len(P)\n",
     "    if k==0: return -1,[]\n",
@@ -162,7 +163,7 @@
     "        R0 = Var.repeat(r0,k)\n",
     "        P0 = Var.repeat(p0,k)\n",
     "       \n",
-    "        M.constraint( Expr.hstack( R0, Expr.sub(P0 , P) ), Domain.inQCone())\n",
+    "        M.constraint( Expr.hstack( R0, P0 - P ), Domain.inQCone())\n",
     "\n",
     "        M.objective(ObjectiveSense.Minimize, r0)\n",
     "        M.setLogHandler(open('logp','wt'))\n",
@@ -268,11 +269,11 @@
     "        Y= M.variable([k,n], Domain.unbounded())\n",
     "        z= M.variable(k    , Domain.unbounded())\n",
     "                    \n",
-    "        M.constraint(Expr.sum(z), Domain.equalsTo(1.) )\n",
+    "        M.constraint(Expr.sum(z) == 1.0)\n",
     "        \n",
     "        e= [1.0 for i in range(k)]\n",
     "        \n",
-    "        M.constraint(Expr.mul(Y.transpose(), Matrix.ones(k,1)), Domain.equalsTo(0.) )\n",
+    "        M.constraint(Y.T @ Matrix.ones(k,1) == 0)\n",
     "\n",
     "        M.constraint( Var.hstack(z,Y), Domain.inQCone())\n",
     "        \n",
@@ -431,7 +432,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -445,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
